--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-29
+Run date: 2018-09-30
 <br>Student User: KaylaRidesBikes
 <br>Project: think-java
 <br>
@@ -94,8 +94,8 @@ Exercise 6:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise.java
-	[ERROR] javac failed Swettercise.java Swettercise.java:23: error: ';' expected
+[COMPILING] Swettercise1.java
+	[ERROR] javac failed Swettercise1.java Swettercise1.java:23: error: ';' expected
 			System.out.println("aString")
 			                             ^
 	1 error
