"report check in 2018-09-30"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,6 +7,7 @@ Run date: 2018-09-30
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
 [PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
@@ -106,16 +107,7 @@ Enter any number in seconds:
 	Exercise4.java:5: error: ';' expected
 			Abecedarian(String word = input.nextInt());
 			                                         ^
-	Exercise4.java:8: error: <identifier> expected
-		public static void boolean Abecedarian(char a, char b, char c){
-		                  ^
-	Exercise4.java:8: error: '(' expected
-		public static void boolean Abecedarian(char a, char b, char c){
-		                   ^
-	Exercise4.java:8: error: invalid method declaration; return type required
-		public static void boolean Abecedarian(char a, char b, char c){
-		                           ^
-	7 errors
+	4 errors
 	
 [SUMMARY] 
 	['Exercise4: COMPILE ERROR (- 0.30)'
