"report check in 2018-09-30"

--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -101,10 +101,10 @@ The amount of seconds since midnight is: 39780 seconds
 -->
 
 	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left"></td><td bgcolor="red"><b>?niw zah I </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left"></td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left"></td><td bgcolor="red"><b>sannanab </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left"></td><td bgcolor="red"><b>tacocat </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
 	</table><br>
 	
 	<br>Results for collatzThis()
