--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -84,18 +84,39 @@ Cloning into 'think-java-Crevin921'...
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-	[ERROR] Runtime Error @ java SwetterciseTest
-Exception in thread "main" java.lang.NullPointerException
-	<br>	at java.lang.String.<init>(String.java:166)
-	<br>	at java.lang.String.valueOf(String.java:3008)
-	<br>	at SwetterciseTest.testIsPrime(SwetterciseTest.java:107)
-	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
-	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
-	<br>
+
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">raised exception</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">raised exception</td><td bgcolor="red"><b>semaj dnob 700 </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">raised exception</td><td bgcolor="red"><b>sannanab </b></td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">raised exception</td><td bgcolor="red"><b>tacocat </b></td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.78]
+	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
-	['Swettercise1: PASSED - EXCELLENT!']
+	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.22</b>
 
 </pre></body></html>
