--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-30
+Run date: 2018-10-01
 <br>Student User: maxckaeh
 <br>Project: think-java
 <br>
@@ -52,9 +52,29 @@ American Format:
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Total number of seconds: 13 seconds = 0 hours, 0 minutes, and 13 seconds.
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+I'm thinking of a number between 0 and 100 (including both). Can you guess what it is? 
+	Your guess is: 13
+	The number I was thinking of is: 23
+	You were off by: -10
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
-	['Exercise3: MISSING (- 0.17)'
-	 'Exercise4: MISSING (- 0.17)']
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -73,7 +93,7 @@ American Format:
 	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.67</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
