--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-30
+Run date: 2018-10-01
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -70,7 +70,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-79
+83
 	
 <--
 	[OUTPUT OK]
@@ -144,45 +144,17 @@ Ch6Ex5.java:57: error: cannot find symbol
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
 [COMPILING] Swettercise.java
-	[SUCCESSFUL COMPILE] Swettercise.java
-[TESTING WITH] SwetterciseTest
-[COMPILING] SwetterciseTest.java
-	[SUCCESSFUL COMPILE] SwetterciseTest.java
-[RUNNING] SwetterciseTest
--->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah i</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
+	[ERROR] javac failed Swettercise.java Swettercise.java:13: error: cannot find symbol
+			System.out.println("Is " + number + " prime? " + isPrime(number));
+			                                                 ^
+	  symbol:   method isPrime(int)
+	  location: class Swettercise
+	1 error
 	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, </td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, </td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, </td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">raised Exception</td><td bgcolor="red"><b>true </b></td></tr>
-	</table><br>
-	[deductions=0.6299999999999999]
-	
-	
-<--
-	[OUTPUT OK]
-
 [SUMMARY] 
-	['Swettercise1: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.37</b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
