--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-30
+Run date: 2018-10-01
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 64
-	You were off by: 51
+	The number I was thinking of is: 70
+	You were off by: 57
 	
 <--
 	[OUTPUT OK]
@@ -115,16 +115,25 @@ I'm thinking of a number between 1 and 100(Including Both)
 	[SUCCESSFUL COMPILE] Exercise4.java
 [TESTING WITH] Ch6Ex4
 [COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:56: error: cannot find symbol
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                                    ^
-	  symbol:   method isAbecedarian(String)
-	  location: class Exercise4
-	1 error
+	[SUCCESSFUL COMPILE] Ch6Ex4.java
+[RUNNING] Ch6Ex4
+-->
+
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
 	
------------END COMPILE-------
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] Ch6Ex5
@@ -150,11 +159,11 @@ Ch6Ex4.java:56: error: cannot find symbol
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise4: COMPILE ERROR (- 0.30)'
+	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -179,30 +188,30 @@ Ch6Ex4.java:56: error: cannot find symbol
 	</table><br>
 	
 	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">6, 3, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">2, 1</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
 	
 	<br>Results for isPrime()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.13999999999999999]
+	[deductions=0.0]
 	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+	['Swettercise1: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">0.86</font></b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
