"report check in 2018-10-04"

--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-01
+Run date: 2018-10-04
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -68,8 +68,8 @@ Enter number of seconds:
 Im thinking of a number between 1 and 100. Can you guess it?
 	What's your guess? 
 	Your guess is: 13
-	The number I was think of is 67
-	You were off by 54
+	The number I was think of is 76
+	You were off by 63
 	
 <--
 	[OUTPUT OK]
@@ -100,6 +100,36 @@ Im thinking of a number between 1 and 100. Can you guess it?
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] Ch6Ex4
+[COMPILING] Ch6Ex4.java
+	[SUCCESSFUL COMPILE] Ch6Ex4.java
+[RUNNING] Ch6Ex4
+-->
+true
+	true
+	false
+	true
+	true
+	true
+	false
+	
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] Ch6Ex5
@@ -133,11 +163,11 @@ Doesnt Work
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
+	['Exercise4: PASSED - EXCELLENT!'
 	 'Exercise5: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.45</b>
+<b>          [SCORE] <font color="green">0.95</font></b>
 
 <hr>
 
