--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-01
+Run date: 2018-10-04
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -95,26 +95,41 @@ Enter any number in seconds:
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
 [COMPILING] Exercise4.java
-	[ERROR] javac failed Exercise4.java Exercise4.java:5: error: ')' expected
-			Abecedarian(String word = input.nextInt());
-			                  ^
-	Exercise4.java:5: error: illegal start of expression
-			Abecedarian(String word = input.nextInt());
-			                        ^
-	Exercise4.java:5: error: ';' expected
-			Abecedarian(String word = input.nextInt());
-			                               ^
-	Exercise4.java:5: error: ';' expected
-			Abecedarian(String word = input.nextInt());
-			                                         ^
-	4 errors
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] Ch6Ex4
+[COMPILING] Ch6Ex4.java
+	[SUCCESSFUL COMPILE] Ch6Ex4.java
+[RUNNING] Ch6Ex4
+-->
+Is abecedarian!
+	Not abecederian!
+	Not abecederian!
+	Is abecedarian!
+	Is abecedarian!
+	Is abecedarian!
+	Not abecederian!
 	
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.05]
+	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
-	['Exercise4: COMPILE ERROR (- 0.30)'
+	['Exercise4: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
 	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.45</b>
 
 <hr>
 
@@ -123,10 +138,27 @@ Enter any number in seconds:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
+[COMPILING] Swettercise1.java
+	[ERROR] javac failed Swettercise1.java Swettercise1.java:5: error: class Swettercise is public, should be declared in a file named Swettercise.java
+	public class Swettercise{
+	       ^
+	Swettercise1.java:33: error: variable num is already defined in method isPrime(int)
+				int num = num % 1;
+				    ^
+	Swettercise1.java:38: error: cannot find symbol
+			if(isPrime){
+			   ^
+	  symbol:   variable isPrime
+	  location: class Swettercise
+	Swettercise1.java:38: error: illegal start of type
+			if(isPrime){
+			  ^
+	4 errors
+	
 [SUMMARY] 
-	['Swettercise1: MISSING (- 0.50)']
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.70</b>
 
 </pre></body></html>
